Fix background of code symbols in dark mode

--- a/assets/css/media-queries/_prefers-color-scheme.scss
+++ b/assets/css/media-queries/_prefers-color-scheme.scss
@@ -55,7 +55,7 @@
     li,
     dd,
     td {
-        &>code {
+        code {
             background: $gray-dark;
         }
     }
